--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -9,5 +9,11 @@
 
 	<p class="body">
 		<%= @post.body %>
-	</p>	
+	</p>
+	<div id = "comments">
+		<h2><%= @post.comments.count %> Comments</h2>
+		<%= render @post.comments %> 
+		<h3>Join Discussion:</h3>
+		<%= render "comments/form" %> 
+	</div>	
 </div>
